Fixed top bar overflow.

--- a/public/style.css
+++ b/public/style.css
@@ -130,7 +130,7 @@ div.card.box {
 /* Top navigation bar */
 .top-bar {
     display: flex;
-    width: 100%;
+    flex-wrap: wrap;
     margin: 0;
     padding: 0;
     background: var(--bg-head);
